--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             overflow: hidden;
             padding: 20px;
             position: relative;
+            transform: scale(1.8); /* ✅ Scale Everything for TV */
+            transform-origin: center;
         }
 
         /* Header */
@@ -45,7 +47,6 @@
 
         #date, #time {
             color: #FFD323;
-            font-size: 4vw; /* Increased for TV */
             font-weight: bold;
         }
 
@@ -64,12 +65,11 @@
             position: relative;
         }
 
-        /* Target & Total Inline (Left Aligned) */
+        /* Target & Total Inline */
         .info-top {
             display: flex;
             justify-content: flex-start;
             width: 100%;
-            font-size: 4vw; /* Bigger text */
             margin-bottom: 12vh;
             padding-left: 4vw;
             gap: 12vw;
@@ -82,34 +82,28 @@
         }
 
         .data {
-            font-size: 7vw; /* Larger number text */
             font-weight: bold;
             color: #FFD323;
             margin-top: 15px;
         }
 
-        /* Today's Count at Bottom Left */
+        /* Today's Count */
         #today-container {
             position: absolute;
             bottom: 4vh;
             left: 5vw;
-            font-size: 4vw;
             display: flex;
             align-items: center;
             gap: 3vw;
         }
 
         #todayCount {
-            font-size: 8vw; /* Bigger number */
             font-weight: bold;
             color: #FFD323;
         }
 
-        /* Button Styling */
+        /* Button */
         .button {
-            width: 8vw;
-            height: 8vw;
-            font-size: 4vw;
             font-weight: bold;
             color: white;
             background-color: #FFD323;
@@ -129,13 +123,11 @@
             color: #FFD323;
         }
 
-        /* ✅ Fixed Mascot Position */
+        /* ✅ Fixed Mascot */
         #mascot-container {
             position: absolute;
             right: 2vw;
             bottom: 10vh;
-            width: 25vw;
-            height: 55vh;
             z-index: 1;
             display: flex;
             justify-content: center;
@@ -143,65 +135,22 @@
         }
 
         #mascot-img {
-            width: 100%;
-            height: 100%;
             object-fit: contain;
             display: block;
-        }
-
-        /* ✅ Responsive Fixes */
-        @media (max-width: 1024px) {
-            #date, #time {
-                font-size: 5vw;
-            }
-
-            .info-top {
-                flex-direction: column;
-                align-items: flex-start;
-                font-size: 6vw;
-            }
-
-            .data {
-                font-size: 8vw;
-            }
-
-            #today-container {
-                bottom: 6vh;
-                left: 6vw;
-                font-size: 6vw;
-            }
-
-            #todayCount {
-                font-size: 9vw;
-            }
-
-            .button {
-                width: 10vw;
-                height: 10vw;
-                font-size: 6vw;
-            }
-
-            #mascot-container {
-                width: 30vw;
-                height: 60vh;
-                right: 6vw;
-                bottom: 6vh;
-            }
         }
     </style>
 </head>
 <body>
 
-    <!-- Header Section -->
+    <!-- Header -->
     <div id="heading-container">
         <span id="date">Loading...</span>
         <img id="heading-img" src="images/Group 4327.png" alt="Revamp Moto Logo">
         <span id="time">Loading...</span>
     </div>
 
-    <!-- Main Data Section -->
+    <!-- Main Data -->
     <div class="container">
-        <!-- Target & Total Count Inline (Moved Left) -->
         <div class="info-top">
             <div class="info-item">
                 <span>Production Target:</span>
@@ -213,7 +162,7 @@
             </div>
         </div>
 
-        <!-- Today's Count at Bottom Left -->
+        <!-- Today's Count -->
         <div id="today-container">
             <span>Today's Count:</span>
             <button class="button" onclick="decrementCount()">−</button>
@@ -222,7 +171,7 @@
         </div>
     </div>
 
-    <!-- ✅ Fixed Mascot -->
+    <!-- Mascot -->
     <div id="mascot-container">
         <img id="mascot-img" src="images/RemoxNandan.png" alt="Mascot">
     </div>
