--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
             overflow: hidden;
             padding: 20px;
             position: relative;
-            transform: scale(1.8); /* ✅ Scale Everything for TV */
-            transform-origin: center;
         }
 
         /* Header */
@@ -35,44 +33,46 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            width: 95%;
-            max-width: 1600px;
-            margin-bottom: 50px;
+            width: 90%;
+            max-width: 1400px;
+            margin-bottom: 30px;
         }
 
         #heading-img {
-            width: 35%;
-            max-width: 600px;
+            width: 30%;
+            max-width: 500px;
         }
 
         #date, #time {
             color: #FFD323;
+            font-size: 2.5vw;
             font-weight: bold;
         }
 
         /* Main Content */
         .container {
             background: #1E1E1E;
-            padding: 6vh;
-            border-radius: 20px;
-            width: 95%;
-            max-width: 1500px;
+            padding: 5vh;
+            border-radius: 15px;
+            width: 90%;
+            max-width: 1200px;
             display: flex;
             flex-direction: column;
-            align-items: flex-start;
+            align-items: flex-start;  /* Align everything to the left */
             text-align: left;
             z-index: 2;
             position: relative;
         }
 
-        /* Target & Total Inline */
+        /* Target & Total Inline (Moved to Left) */
         .info-top {
             display: flex;
-            justify-content: flex-start;
+            justify-content: flex-start;  /* Move everything to the left */
             width: 100%;
-            margin-bottom: 12vh;
-            padding-left: 4vw;
-            gap: 12vw;
+            font-size: 2.5vw;
+            margin-bottom: 10vh; /* Increased gap */
+            padding-left: 3vw; /* Shifted more left */
+            gap: 10vw; /* Maintain equal spacing between them */
         }
 
         .info-item {
@@ -82,28 +82,34 @@
         }
 
         .data {
+            font-size: 5vw;
             font-weight: bold;
             color: #FFD323;
-            margin-top: 15px;
+            margin-top: 10px;
         }
 
-        /* Today's Count */
+        /* Today's Count at Bottom Left */
         #today-container {
             position: absolute;
-            bottom: 4vh;
-            left: 5vw;
+            bottom: 2vh;
+            left: 3vw;
+            font-size: 3vw;
             display: flex;
             align-items: center;
-            gap: 3vw;
+            gap: 2vw;
         }
 
         #todayCount {
+            font-size: 6vw;
             font-weight: bold;
             color: #FFD323;
         }
 
-        /* Button */
+        /* Button Styling */
         .button {
+            width: 6vw;
+            height: 6vw;
+            font-size: 3vw;
             font-weight: bold;
             color: white;
             background-color: #FFD323;
@@ -123,11 +129,13 @@
             color: #FFD323;
         }
 
-        /* ✅ Fixed Mascot */
+        /* ✅ Fixed Mascot Position */
         #mascot-container {
             position: absolute;
-            right: 2vw;
-            bottom: 10vh;
+            right: 1vw;
+            bottom: 12vh;
+            width: 22vw;
+            height: 50vh;
             z-index: 1;
             display: flex;
             justify-content: center;
@@ -135,22 +143,65 @@
         }
 
         #mascot-img {
+            width: 100%;
+            height: 100%;
             object-fit: contain;
             display: block;
+        }
+
+        /* ✅ Responsive Fixes */
+        @media (max-width: 768px) {
+            #date, #time {
+                font-size: 4vw;
+            }
+
+            .info-top {
+                flex-direction: column;
+                align-items: flex-start;
+                font-size: 5vw;
+            }
+
+            .data {
+                font-size: 6vw;
+            }
+
+            #today-container {
+                bottom: 5vh;
+                left: 5vw;
+                font-size: 5vw;
+            }
+
+            #todayCount {
+                font-size: 8vw;
+            }
+
+            .button {
+                width: 10vw;
+                height: 10vw;
+                font-size: 5vw;
+            }
+
+            #mascot-container {
+                width: 35vw;
+                height: 60vh;
+                right: 5vw;
+                bottom: 5vh;
+            }
         }
     </style>
 </head>
 <body>
 
-    <!-- Header -->
+    <!-- Header Section -->
     <div id="heading-container">
         <span id="date">Loading...</span>
         <img id="heading-img" src="images/Group 4327.png" alt="Revamp Moto Logo">
         <span id="time">Loading...</span>
     </div>
 
-    <!-- Main Data -->
+    <!-- Main Data Section -->
     <div class="container">
+        <!-- Target & Total Count Inline (Moved Left) -->
         <div class="info-top">
             <div class="info-item">
                 <span>Production Target:</span>
@@ -162,7 +213,7 @@
             </div>
         </div>
 
-        <!-- Today's Count -->
+        <!-- Today's Count at Bottom Left -->
         <div id="today-container">
             <span>Today's Count:</span>
             <button class="button" onclick="decrementCount()">−</button>
@@ -171,7 +222,7 @@
         </div>
     </div>
 
-    <!-- Mascot -->
+    <!-- ✅ Fixed Mascot -->
     <div id="mascot-container">
         <img id="mascot-img" src="images/RemoxNandan.png" alt="Mascot">
     </div>
