--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <div class="header">
         <div class="date" id="currentDate">27 Feb, 2025</div>
         <div class="logo-container">
-            <img src="https://drive.google.com/file/d/1oorG7a3X2WQ19077d6RqXNnoJ3fxK0YS/view?usp=drive_link" alt="Revamp Moto" class="logo" id="logoPlaceholder">
+            <img src="images/Group 4327.png" alt="Revamp Moto" class="logo" id="logoPlaceholder">
         </div>
         <div class="time" id="currentTime">03:56:12 PM</div>
     </div>
@@ -202,7 +202,7 @@
         </div>
     </div>
     
-    <img src="https://drive.google.com/file/d/1HJBm-953tSiy32TcEuVTA8Clu97wbu4S/view?usp=drive_link" alt="Mascot" class="mascot" id="mascotPlaceholder">
+    <img src="images/RemoxNandan.png" alt="Mascot" class="mascot" id="mascotPlaceholder">
     
     <script>
         // Google Apps Script Web App URL - replace with your published web app URL
