--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <div class="container">
         <div class="header">
             <div class="date-time" id="currentDate">Loading...</div>
-            <img src="Group 4327.png" alt="Revamp Moto Logo" class="logo">
+            <img src="images/Group 4327.png" alt="Revamp Moto Logo" class="logo">
             <div class="date-time" id="currentTime">Loading...</div>
         </div>
 
@@ -124,13 +124,13 @@
         <div class="count-section">
             <p>Today's Count:</p>
             <div class="controls">
-                <button class="btn" id="decrementBtn"><img src="ic_round-minus.svg" alt="Minus"></button>
+                <button class="btn" id="decrementBtn"><img src="images/ic_round-minus.svg" alt="Minus"></button>
                 <span class="count" id="todayValue">Loading...</span>
-                <button class="btn" id="incrementBtn"><img src="ic_round-plus.svg" alt="Plus"></button>
+                <button class="btn" id="incrementBtn"><img src="images/ic_round-plus.svg" alt="Plus"></button>
             </div>
         </div>
 
-        <img src="RemoxNandan.png" alt="Mascot" class="mascot">
+        <img src="images/RemoxNandan.png" alt="Mascot" class="mascot">
     </div>
 
     <script>
