--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             justify-content: space-between;
             width: 90%;
             max-width: 1400px;
-            margin-bottom: 30px;
+            margin-bottom: 50px; /* Increased space */
         }
 
         #heading-img {
@@ -45,17 +45,17 @@
 
         #date, #time {
             color: #FFD323;
-            font-size: 2.5vw;
+            font-size: 3.5vw; /* Increased for TV readability */
             font-weight: bold;
         }
 
         /* Main Content */
         .container {
             background: #1E1E1E;
-            padding: 5vh;
+            padding: 6vh;
             border-radius: 15px;
             width: 90%;
-            max-width: 1200px;
+            max-width: 1400px;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -69,8 +69,8 @@
             display: flex;
             justify-content: space-around;
             width: 100%;
-            font-size: 2.5vw;
-            margin-bottom: 3vh;
+            font-size: 3.5vw; /* Increased */
+            margin-bottom: 8vh; /* Increased spacing */
         }
 
         .info-top .info-item {
@@ -81,34 +81,32 @@
         }
 
         .data {
-            font-size: 5vw;
+            font-size: 6vw; /* Increased */
             font-weight: bold;
             color: #FFD323;
             margin-top: 10px;
         }
 
-        /* Today's Count at Bottom Left */
+        /* Today's Count */
         #today-container {
-            position: absolute;
-            bottom: 2vh;
-            left: 3vw;
-            font-size: 3vw;
+            font-size: 4vw; /* Increased */
             display: flex;
             align-items: center;
-            gap: 2vw;
+            gap: 3vw;
+            margin-top: 10vh; /* Increased space */
         }
 
         #todayCount {
-            font-size: 6vw;
+            font-size: 7vw; /* Increased */
             font-weight: bold;
             color: #FFD323;
         }
 
         /* Button Styling */
         .button {
-            width: 6vw;
-            height: 6vw;
-            font-size: 3vw;
+            width: 7vw;
+            height: 7vw;
+            font-size: 4vw;
             font-weight: bold;
             color: white;
             background-color: #FFD323;
@@ -128,30 +126,10 @@
             color: #FFD323;
         }
 
-        /* ✅ Fixed Mascot Position */
-        #mascot-container {
-            position: absolute;
-            right: 1vw;
-            bottom: 12vh;
-            width: 22vw;
-            height: 50vh;
-            z-index: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        #mascot-img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-            display: block;
-        }
-
         /* ✅ Responsive Fixes */
         @media (max-width: 768px) {
             #date, #time {
-                font-size: 4vw;
+                font-size: 5vw;
             }
 
             .info-top {
@@ -161,30 +139,23 @@
             }
 
             .data {
-                font-size: 6vw;
+                font-size: 7vw;
             }
 
             #today-container {
-                bottom: 5vh;
-                left: 5vw;
-                font-size: 5vw;
+                font-size: 6vw;
+                gap: 4vw;
+                margin-top: 8vh;
             }
 
             #todayCount {
-                font-size: 8vw;
+                font-size: 9vw;
             }
 
             .button {
                 width: 10vw;
                 height: 10vw;
-                font-size: 5vw;
-            }
-
-            #mascot-container {
-                width: 35vw;
-                height: 60vh;
-                right: 5vw;
-                bottom: 5vh;
+                font-size: 6vw;
             }
         }
     </style>
@@ -212,18 +183,13 @@
             </div>
         </div>
 
-        <!-- Today's Count at Bottom Left -->
+        <!-- Today's Count -->
         <div id="today-container">
             <span>Today's Count:</span>
             <button class="button" onclick="decrementCount()">−</button>
             <span id="todayCount">Loading...</span>
             <button class="button" onclick="incrementCount()">+</button>
         </div>
-    </div>
-
-    <!-- ✅ Fixed Mascot -->
-    <div id="mascot-container">
-        <img id="mascot-img" src="images/RemoxNandan.png" alt="Mascot">
     </div>
 
     <!-- JavaScript -->
@@ -270,19 +236,22 @@
 
         async function decrementCount() {
             try {
-                todayCount -= 1;
-                document.getElementById("todayCount").innerText = todayCount;
-                await fetch(decreaseURL);
+                if (todayCount > 0) {
+                    todayCount -= 1;
+                    document.getElementById("todayCount").innerText = todayCount;
+                    await fetch(decreaseURL);
+                }
             } catch (error) {
                 console.error("Error decreasing count:", error);
             }
         }
 
-        setInterval(updateTime, 100);
-        setInterval(fetchSheetData, 100);
+        setInterval(updateTime, 1000);
+        setInterval(fetchSheetData, 5000);
         fetchSheetData();
         updateTime();
     </script>
 
 </body>
 </html>
+
