--- a/index.html
+++ b/index.html
@@ -28,24 +28,27 @@
             position: relative;
         }
 
-        /* Header */
-        #heading-container {
+        /* Navigation Bar */
+        #nav-bar {
+            width: 100%;
+            height: 10vh;
+            background: #2A2A2A;
             display: flex;
             align-items: center;
             justify-content: space-between;
-            width: 90%;
-            max-width: 1400px;
-            margin-bottom: 50px; /* Increased space */
+            padding: 0 5vw;
+            position: absolute;
+            top: 0;
+            left: 0;
         }
 
-        #heading-img {
-            width: 30%;
-            max-width: 500px;
+        #nav-logo {
+            height: 8vh; /* Adjusted for TV visibility */
         }
 
         #date, #time {
             color: #FFD323;
-            font-size: 3.5vw; /* Increased for TV readability */
+            font-size: 3vw; /* Increased for readability */
             font-weight: bold;
         }
 
@@ -62,6 +65,7 @@
             text-align: center;
             z-index: 2;
             position: relative;
+            margin-top: 12vh; /* Adjusted for nav-bar */
         }
 
         /* Target & Total Inline */
@@ -69,8 +73,8 @@
             display: flex;
             justify-content: space-around;
             width: 100%;
-            font-size: 3.5vw; /* Increased */
-            margin-bottom: 8vh; /* Increased spacing */
+            font-size: 3.5vw;
+            margin-bottom: 8vh;
         }
 
         .info-top .info-item {
@@ -81,7 +85,7 @@
         }
 
         .data {
-            font-size: 6vw; /* Increased */
+            font-size: 6vw;
             font-weight: bold;
             color: #FFD323;
             margin-top: 10px;
@@ -89,15 +93,15 @@
 
         /* Today's Count */
         #today-container {
-            font-size: 4vw; /* Increased */
+            font-size: 4vw;
             display: flex;
             align-items: center;
             gap: 3vw;
-            margin-top: 10vh; /* Increased space */
+            margin-top: 10vh;
         }
 
         #todayCount {
-            font-size: 7vw; /* Increased */
+            font-size: 7vw;
             font-weight: bold;
             color: #FFD323;
         }
@@ -126,7 +130,7 @@
             color: #FFD323;
         }
 
-        /* ✅ Responsive Fixes */
+        /* Responsive Fixes */
         @media (max-width: 768px) {
             #date, #time {
                 font-size: 5vw;
@@ -162,10 +166,10 @@
 </head>
 <body>
 
-    <!-- Header Section -->
-    <div id="heading-container">
+    <!-- Navigation Bar -->
+    <div id="nav-bar">
         <span id="date">Loading...</span>
-        <img id="heading-img" src="images/Group 4327.png" alt="Revamp Moto Logo">
+        <img id="nav-logo" src="images/Group 4327.png" alt="Revamp Moto Logo">
         <span id="time">Loading...</span>
     </div>
 
