--- a/index.html
+++ b/index.html
@@ -107,23 +107,23 @@
         }
 
         /* Button Styling */
-        .button {
-            width: 7vw;
-            height: 7vw;
-            font-size: 4vw;
-            font-weight: bold;
-            color: white;
-            background-color: #FFD323;
-            border-radius: 50%;
-            border: none;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            transition: 0.3s;
-            user-select: none;
-            touch-action: manipulation;
-        }
+.button {
+    width: 7vw;
+    height: 7vw;
+    font-size: 4vw;
+    font-weight: bold;
+    color: white;
+    background-color: rgba(255, 211, 35, 0.2); /* Yellow with 20% opacity */
+    border-radius: 50%;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.3s;
+    user-select: none;
+    touch-action: manipulation;
+}
 
         .button:active {
             background-color: white;
